# PathCode

./: .gitignore  README.md  SJPath_helpers.py  SegWSIPathRegion.py  SegWSIPathRegion.py.bk  app_logger.py  file_api.py  mytrain.sh  preprocess.py  random_divide_data.py  single_WSI_processor.py  test.py  train.sh
KFBReading/: kfb_lowlevel.py  kfbslide.py
config/: SJPath.cfg  logging.yaml
generate_map/: .gitignore  CMakeLists.txt
generate_map/config/: detect_config.cfg
generate_map/include/: WsiPredictor.h  blockingconcurrentqueue.h  cnpy.h  concurrentqueue.h
generate_map/src/: CMakeLists.txt  WsiPredictor.cpp  cnpy.cpp  generate_probmap.cpp
model/: VGGSolver.prototxt  VGG_16_deploy.prototxt  VGG_16_train_val.prototxt  original.prototxt
